--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Samba-VirusFilter - On-access anti-virus filter for Samba
-Copyright (C) 2010-2012 SATOH Fumiyasu @ OSS Technology Corp., Japan
+Copyright (C) 2010-2013 SATOH Fumiyasu @ OSS Technology Corp., Japan
 ======================================================================
 
 This is a set of various Samba VFS modules to scan and filter virus
@@ -24,12 +24,13 @@ Supported Anti-Virus engines
 Source repository
 ======================================================================
 
-  http://github.com/fumiyas/samba-virusfilter
+  https://bitbucket.org/fumiyas/samba-virusfilter (primary)
+  https://github.com/fumiyas/samba-virusfilter     (backup)
 
 Commercial support for Samba & Samba-VirusFilter
 ======================================================================
 
   Japan:
-    * Open Source Solution Technology, Inc.
+    * Open Source Solution Technology Corp., Japan
       http://www.OSSTech.co.jp/
 
