README: Add author info

--- a/README
+++ b/README
@@ -25,12 +25,21 @@ Source repository
 ======================================================================
 
   https://bitbucket.org/fumiyas/samba-virusfilter (primary)
-  https://github.com/fumiyas/samba-virusfilter     (backup)
+  https://github.com/fumiyas/samba-virusfilter    (backup)
 
 Commercial support for Samba & Samba-VirusFilter
 ======================================================================
 
   Japan:
     * Open Source Solution Technology Corp., Japan
+      http://www.OSSTech.co.jp/
+
+Author
+======================================================================
+
+  * SATOH Fumiyasu
+      https://twitter.com/satoh_fumiyasu
+      https://BitBucket.org/fumiyas/
+      https://GitHub.com/fumiyas/
       http://www.OSSTech.co.jp/
 
