--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Samba-VirusFilter 0.1.4 (not yet released)
+  * Drop Samba 3.5.x support
+  * Fix SEGV when the result cache becomes empty
+
 Samba-VirusFilter 0.1.3 (2011-11-22)
 
   * INSTALL: Add short description about etc/smb.*.conf.example
