--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 SATOH Fumiyasu:
 
+  * Remove a cache entry on close if file was modified
   * Replace own "stupid" result cache implementation with
     Samba memcache implementation
   * Support other anti-virus engines:
